# bam-builder

./: CHANGELOG.md  Cargo.toml  README.md
examples/: ex1.rs
src/: bam_order.rs  lib.rs  sequence_dict.rs  wrappers.rs
