[package]
name = "bam-builder"
version = "0.1.4-alpha.0"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sstadick/bam-builder"
description = "A library for easily building BAMs for testing."
documentation = "https://docs.rs/bam-builder"
readme = "README.md"
categories = ["science"]
keywords = ["bam", "htslib", "bioinformatics", "genomic"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.44.1"
rand = "0.8.5"
derive_builder = "0.12.0"
tempfile = "3.8.0"
